--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <script src="assets/js/script.js"></script>
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <script src="./assets/js/script.js"></script>
 
   <title>Frontend Mentor | Newsletter sign-up form with success message</title>
 </head>
