Fixed remaining relative paths from absolute and incorrect ones

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       </div>
 
       <picture class="illustration content__illustration">
-        <source srcset="/assets/images/illustration-sign-up-desktop.svg" media="(min-width: 376px)">
-        <img src="/assets/images/illustration-sign-up-mobile.svg" alt="Subscribe to our monthly newsletter!">
+        <source srcset="./assets/images/illustration-sign-up-desktop.svg" media="(min-width: 376px)">
+        <img src="./assets/images/illustration-sign-up-mobile.svg" alt="Subscribe to our monthly newsletter!">
       </picture>
 
     </section>
@@ -56,7 +56,7 @@
 
     <!-- Success message start -->
     <aside class="notification signup__notification hide">
-      <img class="notification__success" src="/assets/images/icon-success.svg" alt="Success!">
+      <img class="notification__success" src="./assets/images/icon-success.svg" alt="Success!">
 
       <div class="message notification__message">
         <h1 class="title message__title">
