Fixed link on "Dismiss message" button

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </p>
       </div>
 
-      <a href="/" class="button notification__button notification__button--primary">
+      <a href="./" class="button notification__button notification__button--primary">
         Dismiss message
       </a>
     </aside>
